predict with lemmatization

--- a/model/predict.ipynb
+++ b/model/predict.ipynb
@@ -12,27 +12,31 @@
     "import os\n",
     "import re\n",
     "import pandas as pd\n",
-    "from joblib import load"
+    "from joblib import load\n",
+    "import ru_core_news_sm as ru"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 9.76 s, sys: 1.29 s, total: 11 s\n",
-      "Wall time: 10.2 s\n"
+      "CPU times: total: 32.2 s\n",
+      "Wall time: 33.3 s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
     "tfidf = load('tfidf.joblib')    \n",
-    "lr = load('logreg.joblib')"
+    "lr = load('logreg.joblib')\n",
+    "lem = ru.load()"
    ]
   },
   {
@@ -41,28 +45,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def clear_text(text):\n",
-    "    text02 = \" \".join(re.sub(r'\\d-\\d{1,4}\\/\\d{2,4}', ' ', text.lower()).split())\n",
-    "    text01 = \" \".join(re.sub(r'\\S{8}-\\d{2}-\\d{4}-\\d{6}-\\d{2}', ' ', text02.lower()).split())\n",
-    "    text0 = \" \".join(re.sub(r'\\d{1,2}\\.\\d{1,2}\\.\\d{2,4}', ' ', text01.lower()).split())\n",
-    "    text1 = text0.replace('российской федерации', '')\n",
-    "    text2 = text1.replace('соответствии', '')\n",
-    "    text3 = text2.replace(' ст ', ' ')\n",
-    "    text4 = text3.replace(' гк ', ' ')\n",
-    "    text5 = text4.replace(' рф ', ' ')\n",
-    "    text6 = text5.replace(' в ', ' ')\n",
-    "    text7 = text6.replace(' с ', ' ')\n",
-    "    text8 = text7.replace('размере', '')\n",
-    "    text9 = text8.replace('а также', '')\n",
-    "    text10 = text9.replace('также', '')\n",
-    "    text11 = text10.replace('решение', '')\n",
-    "    text12 = text11.replace('р е ш е н и е', '')\n",
-    "    text13 = text12.replace('уид', '')\n",
-    "    text14 = text13.replace('именем', '')\n",
-    "    text15 = text14.replace('№', ' ')\n",
-    "    text16 = text15.replace('город', ' ')\n",
-    "    text17 = text16.replace('города', ' ')\n",
-    "    return text17"
+    "def convert(text):\n",
+    "    text = text.lower()\n",
+    "    text = \" \".join(re.sub(r'[^u\"а-яА-Я\"]', ' ', text).split()) #удаляем не буквы\n",
+    "    text = \" \".join(re.sub(r'(^|\\s)\\w{1}(\\s\\w{1})*($|\\s)', ' ', text).split()) #удаляем слова из 1 буквы\n",
+    "    \n",
+    "    doc = lem(text)\n",
+    "    text = \" \".join(token.lemma_ for token in doc)\n",
+    "    return text"
    ]
   },
   {
@@ -72,17 +62,10 @@
    "outputs": [],
    "source": [
     "def predict(text):\n",
-    "    text = clear_text(text)\n",
+    "    text = convert(text)\n",
     "    features = tfidf.transform(pd.Series(text))\n",
     "    return lr.predict_proba(features)[:, 1]"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -101,7 +84,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.9.10"
   }
  },
  "nbformat": 4,
