predict with check document

--- a/model/predict.ipynb
+++ b/model/predict.ipynb
@@ -36,6 +36,8 @@
     "%%time\n",
     "tfidf = load('tfidf.joblib')    \n",
     "lr = load('logreg.joblib')\n",
+    "top_vectorizer = load('top100.joblib')\n",
+    "\n",
     "lem = ru.load()"
    ]
   },
@@ -64,7 +66,10 @@
     "def predict(text):\n",
     "    text = convert(text)\n",
     "    features = tfidf.transform(pd.Series(text))\n",
-    "    return lr.predict_proba(features)[:, 1]"
+    "    top_words = top_vectorizer.transform(pd.Series(text))\n",
+    "    return lr.predict_proba(features)[0][0], top_words.count_nonzero()\n",
+    "# Первый параметр вероятность пренадлежности к 0 классу\n",
+    "# Второй параметр количество слов из топ 100 слов решений (<50 не является решением)"
    ]
   }
  ],
